# PhysicsFlow

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/analyze-run/: SKILL.md  wandb_fetch_metric.py  wandb_overview.py
.claude/skills/commit/: SKILL.md
.claude/skills/slurm/: SKILL.md
config/: model_sizes.py  train.yaml
physicsflow/data/: __init__.py  dataloader.py  dataset.py  steadystate_idx.py  well_dataset.py
physicsflow/models/: __init__.py  loss_fns.py  model_utils.py
physicsflow/models/backbone/: __init__.py  mlp.py
physicsflow/models/common/: __init__.py  embeddings.py
physicsflow/models/diffusion/: __init__.py  diffusion_model.py  schedules.py
physicsflow/models/dit/: __init__.py  blocks.py  configs.py  dit_backbone.py  embeddings.py  modulation.py
physicsflow/models/flow_matching/: __init__.py  flow_matching_model.py  schedulers.py
physicsflow/train/: eval.py  run_training.py  train.yml  train_base.py
physicsflow/train/scripts/: train_riv.sh
physicsflow/train/utils/: checkpoint_utils.py  logger.py  lr_scheduler.py  optimizer.py  run_utils.py  time_keeper.py  wandb_logger.py
scripts/: train_riv.sh
tests/: conftest.py
tests/test_data/: test_dataloader.py  test_dataset.py  test_steadystate_idx.py
tests/test_models/: __init__.py  test_loss_fns.py  test_model_utils.py
tests/test_models/test_backbone/: __init__.py
tests/test_models/test_common/: __init__.py  test_embeddings.py
tests/test_train/: test_eval.py  test_run_training.py  test_train_base.py
tests/test_train/test_utils/: test_logger.py  (+6 more)
(+13 files in other folders)
